lexer已完成，parser开始